# SeciossCAS

./: README.md
seciossaudit/lib/: setup.cfg
seciossaudit/lib/seciossaudit/: __init__.py  audit.py
seciossaudit/lib/seciossaudit/service/: __init__.py  aws.py  box.py  dropbox.py  googleapps.py  lineworks.py  office365.py  salesforce.py  zendesk.py
seciossaudit/scripts/: sample.py
seciosssecuritycheck/: CHANGELOG
seciosssecuritycheck/lib/: setup.cfg
seciosssecuritycheck/lib/seciosssecuritycheck/: __init__.py  securitycheck.py
seciosssecuritycheck/lib/seciosssecuritycheck/service/: __init__.py  aws.py  azure.py  gcp.py
seciosssecuritycheck/scripts/: sample.py
