[metadata]
name = seciossaudit
version = 0.2.0
description = Cloud Services Logs Collection
license = LGPL
log_description = Collect audit logs for cloud services.
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
packages = find:
install_requires =
