[metadata]
name = seciosssecuritycheck
version = 0.2.0
description = IaaS Service Security Checks
license = LGPL
log_description = Detects those that are not the desired settings specified in the IaaS service settings.
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
